--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.8",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^7.10.1",
+    "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.19"
   },
   "scripts": {
     "start": "react-scripts start",
